Use docker mounts for tmp and node_modules directories
Doing this makes access to files in these substantially faster for
macOS. This is particularly noticeable for the compilation of SASS
files.

I've applied a tmp docker mount to all rails projects for consistency
and a node_modules mount for projects that use node. Currently not many
projects use it, however this should be changing in the foreseeable
future with adoption of https://github.com/alphagov/stylelint-config-gds

---

I took some benchmarks to demonstrate the impact this had for SCSS
compilation. These were done with Content Publisher and they represent
a cold cache SCSS compilation reducing in time from 16 seconds to 4 seconds, and
for a warm cache, a ~5s wait reduced to ~0.3s.

Pre-steps:

```
cd ~/govuk/content-publisher
govuk-docker-run bundle exec rails tmp:clear
govuk-docker-run bundle exec rails console
```

Before:

```
irb(main):001:0> puts Benchmark.measure { Rails.application.assets["application.css"] }
  3.175072   1.573766   4.748838 ( 16.350221)
=> nil
irb(main):002:0> puts Benchmark.measure { Rails.application.assets["application.css"] }
  0.416941   0.503787   0.920728 (  5.863118)
=> nil
irb(main):003:0> puts Benchmark.measure { Rails.application.assets["application.css"] }
  0.532579   0.377048   0.909627 (  4.806736)
=> nil
irb(main):004:0> puts Benchmark.measure { Rails.application.assets["application.css"] }
  0.389468   0.400189   0.789657 (  4.725987)
=> nil
```

After:

```
irb(main):001:0> puts Benchmark.measure { Rails.application.assets["application.css"] }
  2.513432   0.598473   3.111905 (  4.023456)
=> nil
irb(main):002:0> puts Benchmark.measure { Rails.application.assets["application.css"] }
  0.214788   0.053805   0.268593 (  0.307541)
=> nil
irb(main):003:0> puts Benchmark.measure { Rails.application.assets["application.css"] }
  0.299529   0.047013   0.346542 (  0.369209)
=> nil
irb(main):004:0> puts Benchmark.measure { Rails.application.assets["application.css"] }
  0.

--- a/projects/asset-manager/docker-compose.yml
+++ b/projects/asset-manager/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.7'
 
+volumes:
+  asset-manager-tmp:
+
 x-asset-manager: &asset-manager
   build:
     context: .
@@ -10,6 +13,7 @@ x-asset-manager: &asset-manager
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - root-home:/root
+    - asset-manager-tmp:/govuk/asset-manager/tmp
   working_dir: /govuk/asset-manager
 
 services:
