--- a/projects/content-data-admin/docker-compose.yml
+++ b/projects/content-data-admin/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.7'
 
+volumes:
+  content-data-admin-tmp:
+
 x-content-data-admin: &content-data-admin
   build:
     context: .
@@ -10,6 +13,7 @@ x-content-data-admin: &content-data-admin
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - root-home:/root
+    - content-data-admin-tmp:/govuk/content-data-admin/tmp
   working_dir: /govuk/content-data-admin
 
 services:
