--- a/projects/email-alert-frontend/docker-compose.yml
+++ b/projects/email-alert-frontend/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.7'
 
+volumes:
+  email-alert-frontend-tmp:
+
 x-email-alert-frontend: &email-alert-frontend
   build:
     context: .
@@ -10,6 +13,7 @@ x-email-alert-frontend: &email-alert-frontend
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - root-home:/root
+    - email-alert-frontend-tmp:/govuk/email-alert-frontend/tmp
   working_dir: /govuk/email-alert-frontend
 
 services:
