--- a/projects/whitehall/docker-compose.yml
+++ b/projects/whitehall/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.7'
 
+volumes:
+  whitehall-tmp:
+
 x-whitehall: &whitehall
   build:
     context: .
@@ -10,6 +13,7 @@ x-whitehall: &whitehall
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - root-home:/root
+    - whitehall-tmp:/govuk/whitehall/tmp
   working_dir: /govuk/whitehall
 
 services:
