--- a/projects/collections-publisher/docker-compose.yml
+++ b/projects/collections-publisher/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.7'
 
+volumes:
+  collections-publisher-tmp:
+
 x-collections-publisher: &collections-publisher
   build:
     context: .
@@ -10,6 +13,7 @@ x-collections-publisher: &collections-publisher
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - root-home:/root
+    - collections-publisher-tmp:/govuk/collections-publisher/tmp
   working_dir: /govuk/collections-publisher
 
 services:
