--- a/projects/release/docker-compose.yml
+++ b/projects/release/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.7'
 
+volumes:
+  release-tmp:
+
 x-release: &release
   build:
     context: .
@@ -10,6 +13,7 @@ x-release: &release
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - root-home:/root
+    - release-tmp:/govuk/release/tmp
   working_dir: /govuk/release
 
 services:
