--- a/projects/search-admin/docker-compose.yml
+++ b/projects/search-admin/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.7'
 
+volumes:
+  search-admin-tmp:
+
 x-search-admin: &search-admin-base
   build:
     context: .
@@ -10,6 +13,7 @@ x-search-admin: &search-admin-base
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - root-home:/root
+    - search-admin-tmp:/govuk/search-admin/tmp
   working_dir: /govuk/search-admin
 
 services:
