--- a/projects/support/docker-compose.yml
+++ b/projects/support/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.7'
 
+volumes:
+  support-tmp:
+
 x-support: &support
   build:
     context: .
@@ -10,6 +13,7 @@ x-support: &support
   volumes:
     - ${GOVUK_ROOT_DIR:-~/govuk}:/govuk:delegated
     - root-home:/root
+    - support-tmp:/govuk/support/tmp
   working_dir: /govuk/support
 
 services:
