--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,8 @@ services:
           - collections-publisher.dev.gov.uk
           - collections.dev.gov.uk
           - content-publisher.dev.gov.uk
+          - content-data-api.dev.gov.uk
+          - content-data-admin.dev.gov.uk
           - content-store.dev.gov.uk
           - content-tagger.dev.gov.uk
           - draft-origin.dev.gov.uk
