--- a/projects/content-data-admin/Makefile
+++ b/projects/content-data-admin/Makefile
@@ -1,2 +1,2 @@
-content-data-admin: bundle-content-data-admin
+content-data-admin: bundle-content-data-admin content-data-api
 	$(GOVUK_DOCKER) run $@-lite sh -c 'bin/rake db:migrate 2>/dev/null || bin/rake db:setup'
