--- a/projects/content-data-api/docker-compose.yml
+++ b/projects/content-data-api/docker-compose.yml
@@ -13,7 +13,7 @@ x-content-data-api: &content-data-api
   working_dir: /govuk/content-data-api
 
 services:
-  content-data-api-lite:
+  content-data-api-lite: &content-data-api-lite
     <<: *content-data-api
     privileged: true
     depends_on:
@@ -22,3 +22,17 @@ services:
       DATABASE_URL: "postgresql://postgres@postgres/content-data-api"
       TEST_DATABASE_URL: "postgresql://postgres@postgres/content-data-api-test"
       DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: "true"
+
+  content-data-api-app: &content-data-api-app
+    <<: *content-data-api-lite
+    expose:
+      - "3000"
+    depends_on:
+      - nginx-proxy
+      - postgres
+    environment:
+      GOVUK_WEBSITE_ROOT: https://www.gov.uk
+      PLEK_SERVICE_CONTENT_STORE_URI: https://www.gov.uk/api
+      PLEK_SERVICE_STATIC_URI: assets.publishing.service.gov.uk
+      VIRTUAL_HOST: content-data-api.dev.gov.uk
+      HOST: 0.0.0.0
