Add GOV.UK Attribute service prototype
A service developed as part of the GOV.UK Account Discovery, provides a database of user attributes that can be used with govuk-account-manager-prototype (see next commit)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,3 +111,4 @@ services:
           - whitehall-admin.dev.gov.uk
           - www-origin.dev.gov.uk
           - www.dev.gov.uk
+          - attributes.login.service.dev.gov.uk
