Add GOV.UK Account manager prototype
A service developed as part of the GOV.UK Account Discovery, provides a user interface for signing up to and managing a GOV.UK account

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,3 +112,4 @@ services:
           - www-origin.dev.gov.uk
           - www.dev.gov.uk
           - attributes.login.service.dev.gov.uk
+          - www.login.service.dev.gov.uk
